feat(openapi) hardening series
